sge plot: moved microenvironment selection to the top, base don feedback from Valentina

--- a/public/viz.html
+++ b/public/viz.html
@@ -188,11 +188,11 @@ function refreshCCISummaryChordPlots() {
                                     </button>
                                   </div>
                                   <li class="divider" tabindex="-1"></li>
-                                  <div class="input-field">
-                                    <input style="padding-top: 30px;" type="text" id="sge_gene_input" placeholder="Gene name">
-                                    <label style="padding-top: 30px;" for="sge_gene_input" class="black-text text-lighten-10 search-input-label">Add genes to the plot</label>
+                                  <div id="sge_microenvironment_sel" class="input-field">
+                                    <input style="padding-top: 30px;" type="text" id="sge_microenvironment_input" placeholder="Microenvironment">
+                                    <label style="padding-top: 10px;" for="sge_microenvironment_input" class="black-text text-lighten-10 search-input-label">Filter cell types by microenvironment</label>
                                   </div>
-                                  <div class="sge_selected_genes"></div>
+                                  <div class="sge_selected_microenvironments"></div>
                                   <div style="padding-top: 20px;"></div>
                                   <div class="input-field">
                                     <input style="padding-top: 30px;" type="text" id="sge_celltype_input" placeholder="Cell type">
@@ -204,11 +204,12 @@ function refreshCCISummaryChordPlots() {
                                           <i class="material-icons right">done_all</i>
                                       </button>
                                   </div>
-                                  <div id="sge_microenvironment_sel" class="input-field">
-                                    <input style="padding-top: 30px;" type="text" id="sge_microenvironment_input" placeholder="Microenvironment">
-                                    <label style="padding-top: 30px;" for="sge_microenvironment_input" class="black-text text-lighten-10 search-input-label">Filter cell types by microenvironment</label>
+                                  <div style="padding-top: 20px;"></div>
+                                  <div class="input-field">
+                                    <input style="padding-top: 30px;" type="text" id="sge_gene_input" placeholder="Gene name">
+                                    <label style="padding-top: 30px;" for="sge_gene_input" class="black-text text-lighten-10 search-input-label">Add genes to the plot</label>
                                   </div>
-                                  <div class="sge_selected_microenvironments"></div>
+                                  <div class="sge_selected_genes"></div>
                               </div>
                             </div>
                           </div>
