Fixed broken tag

--- a/public/error.html
+++ b/public/error.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/cpdbviz.css">
         <script type="text/javascript" src="./external/js/jquery-3.2.1.min.js"></script>
 
-        <script src=" <script type="text/javascript" src="./external/js/materialize.min.js"></script>
+        <script type="text/javascript" src="./external/js/materialize.min.js"></script>
     </head>
   <body>
   <script>
