--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     document.addEventListener('DOMContentLoaded', function() {
        // Populate table of contents automatically from the list of projects returned by the API
        $.ajax({
-                url: '/api/list',
+                url: './api/list',
                 contentType: "application/json",
                 dataType: 'json',
                 success: function(res) {
