--- a/public/viz.html
+++ b/public/viz.html
@@ -58,13 +58,14 @@ function refreshCCISummaryChordPlots() {
         contentType: "application/json",
         dataType: 'json',
         success: function(res) {
+           var max_num_ints = res['max_num_ints'];
            if (res.hasOwnProperty('microenvironment2cell_types')) {
                 const microenvironment2cell_types = res['microenvironment2cell_types'];
                 const map = new Map(Object.entries(microenvironment2cell_types));
                 if (map.size > 0) {
                     var cnt = 1;
                     for (let [microenvironment, cellTypes] of map.entries()) {
-                        generateCellCellInteractionSummaryChordPlot(res, cellTypes.sort(), microenvironment, cnt);
+                        generateCellCellInteractionSummaryChordPlot(res, cellTypes.sort(), microenvironment, cnt, max_num_ints);
                         cnt++;
                         if (cnt > 9) {
                             // TODO: We currently only have up to nine slots for microenvironment-specific cci plots - to be reviewed
@@ -72,12 +73,12 @@ function refreshCCISummaryChordPlots() {
                         }
                     }
                     // Generate plot across cell types also - in case the user wishes to see it
-                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0);
+                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, max_num_ints);
                 } else {
-                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0);
+                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, max_num_ints);
                 }
             } else {
-                generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0);
+                generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, max_num_ints);
             }
         }
      });
