--- a/public/viz.html
+++ b/public/viz.html
@@ -21,7 +21,7 @@
 
         <link rel="stylesheet" href="./external/css/material_icons.css" >
         <link rel="stylesheet" href="./external/css/materialize.min.css">
-        <link rel="stylesheet" href="css/cpdbviz.css">
+        <link rel="stylesheet" href="./css/cpdbviz.css">
         <script type="text/javascript" src="./external/js/materialize.min.js"></script>
         <script type="text/javascript" src="./external/js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="./external/js/jquery-ui.min.js"></script>
@@ -33,7 +33,7 @@
         <script src="./js/cpdbviz.js" type="text/javascript"></script>
         <!-- Libraries below are needed to saving plots as PDFs    -->
         <script type="text/javascript" src="./external/js/pdfkit.standalone.js"></script>
-        <script type="text/javascript" src="./external/js/blob-stream@0.1.3"></script>
+        <script type="text/javascript" src="https://bundle.run/blob-stream@0.1.3"></script>
         <script type="text/javascript" src="./external/js/source.js"></script>
   </head>
   <script type="module">
