cci_summary 'all celltypes' plot - fixed to group labels by microenvironment if microenvironments were provided; otherwise leave cell type labels sorted alphabetically - as before - a remaining fix for chord plots

--- a/public/viz.html
+++ b/public/viz.html
@@ -100,12 +100,12 @@ function refreshCCISummaryChordPlots() {
                         }
                     }
                     // Generate plot across cell types also - in case the user wishes to see it
-                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, min_num_ints, max_num_ints);
+                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types_for_sortedbyme'], "All cell types", 0, min_num_ints, max_num_ints);
                 } else {
-                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, min_num_ints, max_num_ints);
+                    generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types_for_sortedbyme'], "All cell types", 0, min_num_ints, max_num_ints);
                 }
             } else {
-                generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types'], "All cell types", 0, min_num_ints, max_num_ints);
+                generateCellCellInteractionSummaryChordPlot(res, res['all_cell_types_for_sortedbyme'], "All cell types", 0, min_num_ints, max_num_ints);
             }
         }
      });
