Fixed cci_summary plot refresh if both classes and min score are selected; Added test functionality for highlighting areas in anatomograms based on mouse hover over cell type labels in spme plot

--- a/public/viz.html
+++ b/public/viz.html
@@ -57,7 +57,13 @@ function refreshCCISummaryChordPlots() {
     }
     var selectedMinInteractionScore = $('#cci_summary_selected_min_score').text();
     if (cci_summary_selected_min_score) {
-        url += "?min_score=" + selectedMinInteractionScore;
+        var prefix;
+        if (selectedClasses) {
+            prefix = "&";
+        } else {
+            prefix = "?";
+        }
+        url += prefix + "min_score=" + selectedMinInteractionScore;
     }
     $.ajax({
         url: url,
