Added CellphoneDB Viz logo

--- a/public/viz.html
+++ b/public/viz.html
@@ -667,5 +667,11 @@ function refreshCCISummaryChordPlots() {
           </div> <!-- <div class="card"> -->
         </div> <!-- <div class="col s12"> -->
 
+        <div class="card valign-wrapper">
+          <h6 style="padding-left: 30px">Powered by</h6>
+          <a href="https://github.com/datasome/cellphonedbviz">
+              <img src="img/cellphonedbviz_logo.png" alt="CellphoneDB Viz logo" width="200" height="43">
+          </a>
+        </div>
   </body>
 </html>
