cci_search plot: added button to clear selected interactions filter

--- a/public/viz.html
+++ b/public/viz.html
@@ -585,6 +585,9 @@ function refreshCCISummaryChordPlots() {
                                           <li><a href="javascript:refreshCCISearchPlot('40');">Top 40</a></li>
                                           <li><a href="javascript:refreshCCISearchPlot('all');">All</a></li>
                                       </ul>
+                                      <button id="clear_cci_search_interaction_filters" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="clearCCISearchInteractionFilters()">Clear interaction filters
+                                            <i class="material-icons right">clear_all</i>
+                                      </button>
                                       <div id="cci_search_sel_ips_logic_spinner" class="container center" hidden>
                                           <div class="preloader-wrapper active center">
                                             <div class="spinner-layer spinner-red-only">
